--- a/cnpredesign/components/Outage.module.css
+++ b/cnpredesign/components/Outage.module.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    padding: 184px 64px 108px 64px;
+    padding: 150px 64px 0px 64px;
     font-weight: 700;
     font-size: 60px;
     line-height: 60px;
